--- a/c8/index.html
+++ b/c8/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Slider</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="index1.css">
 </head>
 <body>
 	<div class="slider">
@@ -14,16 +14,6 @@
 			<img class="img" src="Images/img4.jpg">
 		</div>
 	</div>
-	<br>
-	<div class="slider2">
-		<div class="slides2">
-			<img class="img" src="Images/img1.jpg">
-			<img class="img" src="Images/img2.jpg">
-			<img class="img" src="Images/img3.jpg">
-			<img class="img" src="Images/img4.jpg">
-		</div>
-	</div>
-		
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="index1.js"></script>
 </body>
 </html>
